# rust_context_emulation

./: Cargo.toml  README.md
examples/gat/: 01_early_bound_lifetime.rs  02_late_bound_lifetime.rs  03_late_bound_external_lifetime.rs  03_transitive_late_bound_lifetime.rs  04_cx_unification_and_coercion.rs  04_cx_unification_and_split.rs  05_capability_access.rs  06_local_capability.rs  adv01_dst_capability.rs  adv01_dyn_cxfn.rs  adv02_dst_capability.rs  adv02_generic_capability.rs  adv03_generic_type_in_capability.rs  adv04_generic_lifetime_in_capability.rs  trait01_emulation_basics.rs  trait02_using_wildcard.rs  trait03_dyn_cxfn.rs  trait04_using_copy_wildcard.rs  wildcard01_with_reborrow.rs  wildcard02_with_reborrow2.rs  wildcard03_with_copy.rs
examples/hybrid/: wildcard02_with_reborrow2.rs  wildcard05_mutable_to_shared_coercion.rs
examples/input/: 01_early_bound_lifetime.rs  02_late_bound_lifetime.rs  03_late_bound_external_lifetime.rs  03_transitive_late_bound_lifetime.rs  04_cx_unification_and_coercion.rs  04_cx_unification_and_split.rs  05_capability_access.rs  06_local_capability.rs  adv01_dst_capability.rs  adv01_dyn_cxfn.rs  adv02_dst_capability.rs  adv02_generic_capability.rs  adv03_generic_type_in_capability.rs  adv04_generic_lifetime_in_capability.rs  trait01_emulation_basics.rs  trait02_using_wildcard.rs  trait03_dyn_cxfn.rs  trait04_using_copy_wildcard.rs  wildcard01_with_reborrow.rs  wildcard02_with_reborrow2.rs  wildcard03_with_copy.rs  wildcard04_early_bound_liftime_flavors.rs
src/: indexed_tuple.rs  lib.rs  lifetime.rs  ops.rs  option.rs  reference.rs  tuple4.rs
src/context/: handle.rs  mod.rs  store.rs
src/cxfn_trait/: gat.rs  hybrid.rs  input.rs  mod.rs
